FEAT: stage seat 수정, 다건 상태변경
See also: #19

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -19,3 +19,5 @@ INVALID_STAGE_SEAT_VECTOR_LENGTH=\uC88C\uD45C \uBCA1\uD130\uB294 \uC815\uD655\uD
 SEATNUMBER_ALREADY_EXISTS=\uD574\uB2F9 \uC2A4\uD14C\uC774\uC9C0\uC5D0 \uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uC88C\uC11D \uBC88\uD638\uC785\uB2C8\uB2E4.
 ROW_COL_ALREADY_EXISTS=\uD574\uB2F9 \uC2A4\uD14C\uC774\uC9C0\uC5D0 \uC774\uBBF8 \uC874\uC7AC\uD558\uB294 \uD589\uACFC \uC5F4\uC785\uB2C8\uB2E4.
 SEAT_NOT_FOUND=\uD574\uB2F9 \uC88C\uC11D\uC744 \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+STAGE_NOT_FOUND_FOR_SEAT_OPERATION=\uD574\uB2F9 \uC2A4\uD14C\uC774\uC9C0\uB97C \uCC3E\uC744 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
+STAGE_INACTIVE_FOR_SEAT_OPERATION=\uBE44\uD65C\uC131\uD654\uB41C \uC2A4\uD14C\uC774\uC9C0\uC5D0\uC11C\uB294 \uC88C\uC11D \uC791\uC5C5\uC744 \uC218\uD589\uD560 \uC218 \uC5C6\uC2B5\uB2C8\uB2E4.
